tests/error/member_from_static.gw
#! [contains] 
class C {
  int i;
  fun static void test() {
    <<< i >>>;
  }
}
